@@ -6,6 +6,11 @@ Changes with Apache 2.3.9
      Fix a denial of service attack against mod_reqtimeout.
      [Stefan Fritsch]
 
+  *) mod_cache: Allow control over the base URL of reverse proxied requests
+     using the CacheKeyBaseURL directive, so that the cache key can be
+     calculated from the endpoint URL instead of the server URL. [Graham
+     Leggett]
+
   *) mod_cache: CacheLastModifiedFactor, CacheStoreNoStore, CacheStorePrivate,
      CacheStoreExpired, CacheIgnoreNoLastMod, CacheDefaultExpire,
      CacheMinExpire and CacheMaxExpire can be set per directory/location.
